--- a/Project1/docker-compose.yaml
+++ b/Project1/docker-compose.yaml
@@ -8,3 +8,11 @@ services:
       - POSTGRES_USER=docker
       - POSTGRES_PASSWORD=docker
       - POSTGRES_DB=exampledb
+  pgadmin:
+          image: dpage/pgadmin4
+          environment: 
+              - PGADMIN_DEFAULT_EMAIL=pgadmin4@pgadmin.org
+              - PGADMIN_DEFAULT_PASSWORD=admin1234
+          ports:
+              - '5050:80'
+          restart: always
