--- a/Project1/docker-compose.yaml
+++ b/Project1/docker-compose.yaml
@@ -16,3 +16,8 @@ services:
           ports:
               - '5050:80'
           restart: always
+  zookeeper:
+    image: confluentinc/cp-zookeeper:5.5.3
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+
