--- a/Project1/docker-compose.yaml
+++ b/Project1/docker-compose.yaml
@@ -49,3 +49,13 @@ services:
     depends_on: [kafka]
     ports:
       - 8083:8083
+  
+  schema-registry:
+    image: confluentinc/cp-schema-registry:5.5.3
+    environment:
+      - SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL=zookeeper:2181
+      - SCHEMA_REGISTRY_HOST_NAME=schema-registry
+      - SCHEMA_REGISTRY_LISTENERS=http://schema-registry:8081,http://localhost:8081
+    ports:
+      - 8081:8081
+    depends_on: [zookeeper, kafka]
